# gst-plugins-bad

./: .gitignore  configure.ac  meson.build  meson_options.txt
docs/: meson.build
docs/libs/codecparsers/: index.md
docs/libs/mpegts/: index.md
docs/libs/webrtc/: index.md
docs/plugins/: gst_plugins_cache.json
ext/: meson.build
ext/assrender/: meson.build
ext/bz2/: meson.build
ext/chromaprint/: meson.build
ext/curl/: meson.build
ext/dash/: meson.build
ext/directfb/: meson.build
ext/dtls/: gstdtlsdec.c  gstdtlssrtpdec.c  meson.build
ext/dts/: gstdtsdec.c  meson.build
ext/faac/: meson.build
ext/faad/: meson.build
ext/fdkaac/: meson.build
ext/flite/: meson.build
ext/fluidsynth/: meson.build
ext/gl/: meson.build
ext/gsm/: meson.build
ext/gtk/: meson.build
ext/hls/: gsthlsdemux.c  meson.build
ext/iqa/: meson.build
ext/kate/: meson.build
ext/libde265/: meson.build
ext/libmms/: meson.build
ext/lv2/: gstlv2filter.c
ext/mpeg2enc/: meson.build
ext/mplex/: meson.build
ext/opencv/: meson.build
ext/openh264/: meson.build
ext/openjpeg/: meson.build
ext/opus/: meson.build
ext/resindvd/: meson.build  resindvdsrc.c  rsndec.c  rsndec.h
ext/rsvg/: meson.build
ext/rtmp/: meson.build
ext/sbc/: meson.build
ext/schroedinger/: gstschroenc.c  meson.build
ext/smoothstreaming/: meson.build
ext/soundtouch/: meson.build
ext/spandsp/: meson.build
ext/srtp/: meson.build  srtp_mkenum.py
ext/ttml/: meson.build
ext/voaacenc/: meson.build
ext/vp8/: gstvp8dec.c
ext/vulkan/: meson.build
ext/wayland/: meson.build
ext/webp/: meson.build
ext/webrtc/: gstwebrtcbin.c  meson.build
ext/webrtcdsp/: meson.build
ext/x265/: meson.build
gst/: meson.build
gst-libs/gst/: Makefile.am  meson.build
gst-libs/gst/basecamerabinsrc/: gstbasecamerasrc.c  gstbasecamerasrc.h
gst-libs/gst/codecparsers/: Makefile.am  gstvc1parser.c  gstvc1parser.h
gst-libs/gst/drm/: Makefile.am  drmbufferpool.h  gstdrmbufferpool.c  gstdrmbufferpool.h
gst-libs/gst/gl/: meson.build
gst-libs/gst/interfaces/: build_mkenum.py  meson.build
gst-libs/gst/mpegts/: meson.build  mpegts_enum.py
gst-libs/gst/transcoding/: meson.build
gst-libs/gst/transcoding/transcoder/: gsttranscoder.c  meson.build
gst-libs/gst/video/: gstvideoaggregatorpad.h  meson.build
gst-libs/gst/wayland/: meson.build
gst-libs/gst/webrtc/: dtlstransport.h  icetransport.h  rtpreceiver.h  rtpsender.h  rtptransceiver.h  webrtc_fwd.h
gst-libs/sys/: Makefile.am
gst-libs/sys/dma/: Makefile.am  gstdmabufmeta.c  gstdmabufmeta.h
gst-libs/sys/drm/: Makefile.am  gstdrmbufferpool.c  gstdrmbufferpool.h  gstdrmmeta.c  gstdrmmeta.h
gst/bayer/: gstbayer2rgb.c
gst/camerabin2/: Makefile.am  gstcamerabin2.c  gstcamerabin2.h  gstomxcamerabinsrc.c  gstomxcamerabinsrc.h  gstplugin.c  gstviewfinderbin.c  gstwrappercamerabinsrc.c  gstwrappercamerabinsrc.h
gst/compositor/: blend.c  blend.h  compositor.c  meson.build
gst/dccp/: gstdccp.c  gstdccp_common.h  gstdccpclientsink.h  gstdccpclientsrc.h  gstdccpserversink.h  gstdccpserversrc.h
gst/dvdspu/: gstdvdspu.c  gstdvdspu.h  gstspu-common.h  gstspu-pgs.c  gstspu-vobsub-render.c
gst/freeverb/: meson.build
gst/freeze/: gstfreeze.c
gst/h264parse/: gsth264parse.c
gst/hls/: gstfragment.c  gsthlsdemux.c
gst/librfb/: d3des.c
gst/mms/: Makefile.am  gstmmssrc.c  gstmmssrc.h  mms.c  mms.h
gst/mpegdemux/: gstmpegdemux.c
gst/mpegtsdemux/: TODO  mpegtspacketizer.c  mpegtspacketizer.h  tsdemux.c
gst/netsim/: meson.build
gst/removesilence/: meson.build
gst/stereo/: meson.build
gst/transcode/: meson.build
gst/videoparsers/: Makefile.am  gsth264parse.c  gsth264parse.h  gstmpegvideoparse.c  gstvc1parse.c  plugin.c
pkgconfig/: gstreamer-dmabuf-uninstalled.pc.in  gstreamer-dmabuf.pc.in  gstreamer-drm-uninstalled.pc.in  gstreamer-drm.pc.in  gstreamer-plugins-bad-uninstalled.pc.in  gstreamer-transcoder-uninstalled.pc.in  gstreamer-transcoder.pc.in  meson.build
sys/: Makefile.am  meson.build
sys/bluez/: meson.build
sys/d3dvideosink/: meson.build
sys/dri2/: Makefile.am  gstdri2.c  gstdri2bufferpool.c  gstdri2bufferpool.h  gstdri2util.c  gstdri2util.h  gstdri2videosink.c  gstdri2videosink.h
sys/fbdev/: gstfbdevsink.c
sys/ipcpipeline/: meson.build
sys/kms/: Makefile.am  gstdrmutils.c  gstdrmutils.h  gstducati.h  gstducatibuffer.c  gstducatibuffer.h  gstducatibufferpool.c  gstducatibufferpool.h  gstducatidrmbuffer.c  gstducatidrmbuffer.h  gstducatikmsbuffer.c  gstducatikmsbuffer.h  gstkmsbufferpriv.c  gstkmsbufferpriv.h  gstkmssink.c  gstkmssink.h
sys/msdk/: meson.build
sys/pvr2d/: Makefile.am  gstpvr.c  gstpvr.h  gstpvrbufferpool.c  gstpvrbufferpool.h  gstpvrbufferpriv.c  gstpvrbufferpriv.h  gstpvrvideosink.c  gstpvrvideosink.h
sys/pvr2d/pvr_includes/: pvr2d.h
sys/shm/: meson.build
tests/: meson.build
tests/check/: Makefile.am  meson.build
tests/check/elements/: camerabin2.c
tests/examples/camerabin2/: gst-camerabin2-test.c
tools/: meson.build
