subdir('assrender', components: [plugins_component])
#subdir('bs2b', components: [plugins_component, component('bs2b')])
subdir('bz2', components: [plugins_component])
subdir('chromaprint', components: [plugins_component])
subdir('curl', components: [plugins_component])
#subdir('daala', components: [plugins_component, component('daala')])
subdir('dash', components: [plugins_component])
#subdir('dc1394', components: [plugins_component, component('dc1394')])
subdir('directfb', components: [plugins_component])
subdir('dtls', components: [plugins_component])
dts_comp = component('dts')
subdir('dts', components: [plugins_component, dts_comp])
subdir('faac', components: [plugins_component])
subdir('faad', components: [plugins_component])
subdir('fdkaac', components: [plugins_component])
subdir('flite', components: [plugins_component])
subdir('fluidsynth', components: [plugins_component])

gl_comp = component('gl', dependencies: gl_lib_comp)
subdir('gl', components: [plugins_component, gl_comp])

#subdir('gme', components: [plugins_component, component('gme')])
subdir('gsm', components: [plugins_component])
subdir('gtk', components: [plugins_component])
subdir('hls', components: [plugins_component])
subdir('iqa', components: [plugins_component])
subdir('kate', components: [plugins_component])
#subdir('ladspa', components: [plugins_component, component('ladspa')])
subdir('libde265', components: [plugins_component])
subdir('libmms', components: [plugins_component])
#subdir('lv2', components: [plugins_component, component('lv2')])
#subdir('modplug', components: [plugins_component, component('modplug')])
subdir('mpeg2enc', components: [plugins_component])
subdir('mplex', components: [plugins_component])
#subdir('musepack', components: [plugins_component, component('musepack')])
#subdir('neon', components: [plugins_component, component('neon')])
#subdir('ofa', components: [plugins_component, component('ofa')])
#subdir('openal', components: [plugins_component, component('openal')])
subdir('opencv', components: [plugins_component])
#subdir('openexr', components: [plugins_component, component('openexr')])
subdir('openh264', components: [plugins_component])

subdir('openjpeg', components: [plugins_component])
#subdir('openni2', components: [plugins_component, component('openni2')])
subdir('opus', components: [plugins_component])
subdir('resindvd', components: [plugins_component])
subdir('rsvg', components: [plugins_component])
subdir('rtmp', components: [plugins_component])
subdir('sbc', components: [plugins_component])
subdir('schroedinger', components: [plugins_component])
subdir('smoothstreaming', components: [plugins_component])
#subdir('sndfile', components: ['plugins, component('sndfile')])
if cc.get_id() != 'msvc'
  # soundtouch doesn't do exporting of symbols for DLLs and I'm not sure how to
  # do that for C++ classes. -- Nirbheek
  subdir('soundtouch', components: [plugins_component])
  # libspandsp has a bunch of portability issues in the headers
  # If someone really wants to use this, it shouldn't be hard to port
  subdir('spandsp', components: [plugins_component])
endif
#subdir('spc', components: [plugins_component, component('spc')])
subdir('srtp', components: [plugins_component])
#subdir('teletextdec', components: [plugins_component, component('teletextdec')])
#subdir('wildmidi', components: [plugins_component, component('wildmidi')])
subdir('ttml', components: [plugins_component])
subdir('voaacenc', components: [plugins_component])
#subdir('voamrwbenc', components: [plugins_component, component('voamrwbenc')])
subdir('vulkan', components: [plugins_component])
subdir('wayland', components: [plugins_component])
subdir('webrtcdsp', components: [plugins_component])
subdir('webp', components: [plugins_component])
subdir('x265', components: [plugins_component])
subdir('zbar', components: [plugins_component, component('zbar')])
