subdir('accurip', components: [plugins_component, component('accurip')])
subdir('adpcmdec', components: [plugins_component, component('adpcmdec')])
subdir('adpcmenc', components: [plugins_component, component('adpcmenc')])
subdir('aiff', components: [plugins_component, component('aiff')])
subdir('asfmux', components: [plugins_component, component('asfmux')])
subdir('audiobuffersplit', components: [plugins_component, component('audiobuffersplit')])
subdir('audiofxbad', components: [plugins_component, component('audiofxbad')])
subdir('audiomixer', components: [plugins_component, component('audiomixer')])
subdir('audiomixmatrix', components: [plugins_component, component('audiomixmatrix')])
subdir('audiovisualizers', components: [plugins_component, component('audiovisualizers')])
subdir('autoconvert', components: [plugins_component, component('autoconvert')])
subdir('bayer', components: [plugins_component, component('bayer')])
subdir('camerabin2', components: [plugins_component, component('camerabin2')])
subdir('coloreffects', components: [plugins_component, component('coloreffects')])
subdir('compositor', components: [plugins_component, component('compositor')])
subdir('debugutils', components: [plugins_component, component('debugutils')])
subdir('dvbsuboverlay', components: [plugins_component, component('dvbsuboverlay')])
subdir('dvdspu', components: [plugins_component, component('dvdspu')])
subdir('faceoverlay', components: [plugins_component, component('faceoverlay')])
subdir('festival', components: [plugins_component, component('festival')])
subdir('fieldanalysis', components: [plugins_component, component('fieldanalysis')])
subdir('freeverb', components: [plugins_component, component('freeverb')])
subdir('frei0r', components: [plugins_component, component('frei0r')])
subdir('gaudieffects', components: [plugins_component, component('gaudieffects')])
subdir('gdp', components: [plugins_component, component('gdp')])
subdir('geometrictransform', components: [plugins_component, component('geometrictransform')])
subdir('id3tag', components: [plugins_component, component('id3tag')])
subdir('inter', components: [plugins_component, component('inter')])
subdir('interlace', components: [plugins_component, component('interlace')])
subdir('ivfparse', components: [plugins_component, component('ivfparse')])
subdir('ivtc', components: [plugins_component, component('ivtc')])
subdir('jp2kdecimator', components: [plugins_component, component('jp2kdecimator')])
subdir('jpegformat', components: [plugins_component, component('jpegformat')])
subdir('librfb', components: [plugins_component, component('librfb')])
subdir('midi', components: [plugins_component, component('midi')])
subdir('mpegdemux', components: [plugins_component, component('mpegdemux')])
subdir('mpegpsmux', components: [plugins_component, component('mpegpsmux')])
subdir('mpegtsdemux', components: [plugins_component, component('mpegtsdemux')])
subdir('mpegtsmux', components: [plugins_component, component('mpegtsmux')])
subdir('mxf', components: [plugins_component, component('mxf')])
subdir('netsim', components: [plugins_component, component('netsim')])
subdir('onvif', components: [plugins_component, component('onvif')])
subdir('pcapparse', components: [plugins_component, component('pcapparse')])
subdir('pnm', components: [plugins_component, component('pnm')])
subdir('rawparse', components: [plugins_component, component('rawparse')])
subdir('removesilence', components: [plugins_component, component('removesilence')])
subdir('sdp', components: [plugins_component, component('sdp')])
subdir('segmentclip', components: [plugins_component, component('segmentclip')])
subdir('siren', components: [plugins_component, component('siren')])
subdir('smooth', components: [plugins_component, component('smooth')])
#subdir('smoothwave', components: [plugins_component, component('smoothwave')])
subdir('speed', components: [plugins_component, component('speed')])
subdir('stereo', components: [plugins_component, component('stereo')])
subdir('subenc', components: [plugins_component, component('subenc')])
subdir('timecode', components: [plugins_component, component('timecode')])
subdir('videofilters', components: [plugins_component, component('videofilters')])
subdir('videoframe_audiolevel', components: [plugins_component, component('videoframe_audiolevel')])
subdir('videoparsers', components: [plugins_component, component('videoparsers')])
subdir('videosignal', components: [plugins_component, component('videosignal')])
subdir('vmnc', components: [plugins_component, component('vmnc')])
subdir('y4m', components: [plugins_component, component('y4m')])
subdir('yadif', components: [plugins_component, component('yadif')])
