#subdir('acmenc', components: [plugins_component, component('acmenc')])
#subdir('acmmp3dec', components: [plugins_component, component('acmmp3dec'])
#subdir('androidmedia', components: [plugins_component, component('androidmedia'])
#subdir('applemedia', components: [plugins_component, component('applemedia'])
subdir('bluez', components: [plugins_component])
subdir('d3dvideosink', components: [plugins_component, component('d3dvideosink')])
subdir('decklink', components: [plugins_component, component('decklink')])
subdir('directsound', components: [plugins_component, component('directsound')])
#subdir('dshowdecwrapper', components: [plugins_component, component('dshowdecwrapper'])
#subdir('dshowsrcwrapper', components: [plugins_component, component('dshowsrcwrapper'])
#subdir('dshowvideosink', components: [plugins_component, component('dshowvideosink'])
subdir('dvb', components: [plugins_component, component('dvb')])
subdir('fbdev', components: [plugins_component, component('fbdev')])
subdir('ipcpipeline', components: [plugins_component, component('ipcpipeline')])
subdir('kms', components: [plugins_component, component('kms')])
subdir('msdk', components: [plugins_component, component('msdk')])
#subdir('nvenc', components: [plugins_component, component('nvenc')])
#subdir('opensles', components: [plugins_component, component('opensles')])
subdir('shm', components: [plugins_component])
subdir('uvch264', components: [plugins_component, component('uvch264')])
#subdir('vcd', components: [plugins_component, homponent('vcd')])
#subdir('vdpau', components: [plugins_component, component('vdpau')])
subdir('wasapi', components: [plugins_component, component('wasapi')])
subdir('winks', components: [plugins_component, component('winks')])
subdir('winscreencap', components: [plugins_component, component('winscreencap')])
